--- a/Tarea Parte 1.ipynb
+++ b/Tarea Parte 1.ipynb
@@ -631,8 +631,29 @@
   {
    "cell_type": "code",
    "source": [
-    "# false positives\n",
-    "logistic_pred_df[logistic_pred_df['salary'] == 0][logistic_pred_df['predict'] == 1].groupby('sex').count()"
+    "# false positives sex == 0\n",
+    "fp_0 = logistic_pred_df[logistic_pred_df['salary'] == 0][logistic_pred_df['predict'] == 1][logistic_pred_df['sex'] == 0].shape[0]\n",
+    "\n",
+    "# false positives sex == 1\n",
+    "fp_1 = logistic_pred_df[logistic_pred_df['salary'] == 0][logistic_pred_df['predict'] == 1][logistic_pred_df['sex'] == 1].shape[0]\n",
+    "\n",
+    "# false negetive sex == 0\n",
+    "fn_0 = logistic_pred_df[logistic_pred_df['salary'] == 1][logistic_pred_df['predict'] == 0][logistic_pred_df['sex'] == 0].shape[0]\n",
+    "\n",
+    "# false negetive sex == 0\n",
+    "fn_1 = logistic_pred_df[logistic_pred_df['salary'] == 1][logistic_pred_df['predict'] == 0][logistic_pred_df['sex'] == 1].shape[0]\n",
+    "\n",
+    "\n",
+    "# true positive sex == 0\n",
+    "tp_0 = logistic_pred_df[logistic_pred_df['salary'] == 1][logistic_pred_df['predict'] == 1][logistic_pred_df['sex'] == 0].shape[0]\n",
+    "\n",
+    "# true positive sex == 1\n",
+    "tp_1 = logistic_pred_df[logistic_pred_df['salary'] == 1][logistic_pred_df['predict'] == 1][logistic_pred_df['sex'] == 1].shape[0]\n",
+    "\n",
+    "n_0 = logistic_pred_df[logistic_pred_df['sex'] == 0].shape[0]\n",
+    "n_1 = logistic_pred_df[logistic_pred_df['sex'] == 1].shape[0]\n",
+    "\n",
+    "tp_1/n_1"
    ],
    "metadata": {
     "collapsed": false,
@@ -640,21 +661,25 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 26,
+   "execution_count": 40,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Boolean Series key will be reindexed to match DataFrame index.\n",
+      "Boolean Series key will be reindexed to match DataFrame index.\n",
+      "Boolean Series key will be reindexed to match DataFrame index.\n",
+      "Boolean Series key will be reindexed to match DataFrame index.\n",
+      "Boolean Series key will be reindexed to match DataFrame index.\n",
       "Boolean Series key will be reindexed to match DataFrame index.\n"
      ]
     },
     {
      "data": {
-      "text/plain": "     age  education-num  capital-gain  capital-loss  hours-per-week  salary  \\\nsex                                                                           \n0.0   79             79            79            79              79      79   \n1.0  827            827           827           827             827     827   \n\n     predict  \nsex           \n0.0       79  \n1.0      827  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>education-num</th>\n      <th>capital-gain</th>\n      <th>capital-loss</th>\n      <th>hours-per-week</th>\n      <th>salary</th>\n      <th>predict</th>\n    </tr>\n    <tr>\n      <th>sex</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0.0</th>\n      <td>79</td>\n      <td>79</td>\n      <td>79</td>\n      <td>79</td>\n      <td>79</td>\n      <td>79</td>\n      <td>79</td>\n    </tr>\n    <tr>\n      <th>1.0</th>\n      <td>827</td>\n      <td>827</td>\n      <td>827</td>\n      <td>827</td>\n      <td>827</td>\n      <td>827</td>\n      <td>827</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "0.1437082624067042"
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
